# openCap

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  settings.html  vite.config.js
.github/workflows/: release.yml
docs/: index.html
src/: App.svelte  main.js
src-settings/: Settings.svelte  main.js
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer-hooks.nsi
src-tauri/src/: capture.rs  clipboard.rs  config.rs  lib.rs  main.rs  programs.rs  settings_lib.rs  storage.rs  tray.rs
src/lib/: RegionSelector.svelte
