[package]
name = "opencap"
version = "0.2.1"
description = "Lightweight cross-platform screenshot tool"
authors = ["you"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = ">=2.9, <2.10", features = ["image-png", "macos-private-api"] }
tauri-plugin-log = "2"
open = "5"
screenshots = "0.8"
image = "0.25"
chrono = "0.4"
dirs = "6"
arboard = { version = "3", features = ["image-data"] }
base64 = "0.22"
